Ajuste para funcionamento de cadastro de usuário

--- a/cadastre-se.html
+++ b/cadastre-se.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastre-se</title>
-    <link rel="stylesheet" href="../estilos/cadastre-se.css">
+    <link rel="stylesheet" href="/styles/cadastre-se.css">
 </head>
 <body>
     <div class="container">
         <h1>Cadastre-se</h1>
-        <form action="/submit-cadastro" method="post">
+        <form >
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
             
@@ -25,5 +25,6 @@
             <button type="submit">Cadastrar</button>
         </form>
     </div>
+    <script src="/scripts/cadastre-se.js"></script>
 </body>
 </html>
